# kernel-shark-sebanek-gh-mirror

./: .gitignore  .gitmodules  Buglog.md  CHANGELOG.md  Devlog.md  LICENSE  ProjectSpecification.md  README.md  README.wip.md  Roadmap.md  Tracker.md  build_all.sh  build_modif_kshark.sh
Couplebreaker/src/: couplebreaker.c
ExamplePrograms/: recursive_syscall_with_sleep.c
KS_fork/: .gitignore  CMakeLists.txt  README
KS_fork/Modifications/: NUMA-topology-views.md  README.md  couplebreak.md  get-colors.md  get-pid-colors.md  mouse-hover-plot-objects.md  no-boxes.md  preview-labels-changeable.md  preview-lables-changeable.md  record-kstack.md  topology-views.md
KS_fork/src/: CMakeLists.txt  KsCaptureDialog.cpp  KsCaptureDialog.hpp  KsGLWidget.cpp  KsGLWidget.hpp  KsMainWindow.cpp  KsMainWindow.hpp  KsNUMATopologyViews.cpp  KsNUMATopologyViews.hpp  KsPlotTools.cpp  KsPlotTools.hpp  KsPluginsGUI.cpp  KsSession.cpp  KsSession.hpp  KsStreamNUMATopology.cpp  KsStreamNUMATopology.hpp  KsTopologyViews.cpp  KsTopologyViews.hpp  KsTraceGraph.cpp  KsTraceGraph.hpp  KsTraceViewer.cpp  KsTraceViewer.hpp  KsUtils.cpp  KsUtils.hpp  KsWidgetsLib.cpp  KsWidgetsLib.hpp  libkshark-configio.c  libkshark-couplebreak.c  libkshark-couplebreak.h  libkshark-numatv.h  libkshark-tepdata.c  libkshark-tepdata.h  libkshark.c  libkshark.h
KS_fork/src/plugins/: SchedEvents.cpp  sched_events.c
NapRects/: README.wip.md
NapRects/doc/: mainpage.wip.doxygen
NapRects/src/: NapConfig.cpp  NapConfig.hpp  NapRectangle.cpp  NapRectangle.hpp  Naps.cpp  nap_rects.c  nap_rects.h  naps.c  naps.h
Naps/: .gitignore  CMakeLists.txt  LICENSE  README.md  README.wip.md
Naps/doc/: Doxyfile  design.doxygen  mainpage.doxygen
Naps/doc/user/: user-manual.md  user-manual.odt
Naps/src/: CMakeLists.txt  NapConfig.cpp  NapConfig.hpp  NapRectangle.cpp  NapRectangle.hpp  Naps.cpp  naps.c  naps.h
NoBoxes/: .gitignore  CMakeLists.txt  README.md
NoBoxes/doc/: Doxyfile  design.doxygen  mainpage.doxygen
NoBoxes/doc/user/: user-manual.md  user-manual.odt
NoBoxes/src/: CMakeLists.txt  noboxes.c  noboxes.h
Stacklook/: .gitignore  CMakeLists.txt  README.md
Stacklook/doc/: Doxyfile  TODO_kernelshark_modifications.doxygen  TODO_mainpage.doxygen  design.doxygen  mainpage.doxygen
Stacklook/doc/user/: Manual.md  TODO_Manual.md  TODO_user-manual.md  user-manual.md  user-manual.odt
Stacklook/src/: CMakeLists.txt  SlButton.cpp  SlButton.hpp  SlConfig.cpp  SlConfig.hpp  SlDetailedView.cpp  SlDetailedView.hpp  SlDetailedWindow.cpp  SlDetailedWindow.hpp  SlNapRectangle.hpp  SlPrevState.cpp  SlPrevState.hpp  SlWakeupTepProcessing.cpp  SlWakingTepProcessing.cpp  Stacklook.cpp  Stacklook.hpp  StacklookDetailedStack.cpp  StacklookDetailedStack.hpp  _utilities.hpp  stacklook.c  stacklook.cpp  stacklook.h  stacklook.hpp
SurveyPaper/: jak_psát_bc.txt  nové_a_změněné_soubory.txt  overleaf-view-link.txt  zásady_pro_vypracování.txt
SurveyPaper/ExampleData/: empty.xml  synth_topo_diff_n_cpus.xml  synth_topo_no_numa.xml  synth_topo_w_numa.xml
SurveyPaper/ExamplePrograms/: recursive_syscall_with_sleep.c
SurveyPaper/mirror-copy/: 10_dodatečné.tex  1_trasování_v_linuxu.tex  2_vizualizace_traceů.tex  3_kshark.tex  4_obecná_analýza.tex  5_record_kstack.tex  6_stacklook.tex  7_couplebreak.tex  8_naps.tex  9_numatv.tex  _selfmeta_buglog_n_tracker.txt  _selfmeta_devlog.txt  _selfmeta_jak_psát_bc.txt  _selfmeta_pomůcky.txt  _selfmeta_zadání.txt  literatura.bib  metadata.tex  thesis.tex  uvod.tex  zaver.tex
SurveyPaper/mirror-copy/img/Vizualizátory/: TracesharkGitHubExample.png:Zone.Identifier
SurveyPaper/mirror-copy/tmp/: 10_dodatečné.aux  1_trasování_v_linuxu.aux  2_vizualizace_traceů.aux  3_kshark.aux  4_obecná_analýza.aux  5_record_kstack.aux  6_stacklook.aux  7_couplebreak.aux  8_naps.aux  9_numatv.aux  analýza.aux  literatura.aux  pdfa.xmpi  příbuzné_práce.aux  rozšíření.aux  thesis.aux  thesis.bcf  thesis.fdb_latexmk  thesis.fls  thesis.lof  thesis.lot  thesis.out  thesis.run.xml  thesis.toc  thesis.xmpdata  uvod.aux  uživatelská_dokumentace.aux  vývojová_dokumentace.aux  zaver.aux
